--- a/Bookish-cs.csproj
+++ b/Bookish-cs.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>Bookish_cs</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+  </ItemGroup>
+
 </Project>
