--- a/Bookish-cs.csproj
+++ b/Bookish-cs.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Book\" />
+    <Folder Include="Views\Member\" />
+  </ItemGroup>
+
 </Project>
